# agenticodetest

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: __init__.py  calculator.py  hello.py
tests/: __init__.py  test_calculator.py  test_hello.py
